rust/macros/tests/invalid/target/debug/deps/comma_sep_rs-0b9a61c9d8c245d8.d
/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/libcomma_sep_rs-0b9a61c9d8c245d8.rmeta: comma-sep.rs Cargo.toml

/home/diny/projects-code/exercism-solutions/rust/macros/tests/invalid/target/debug/deps/comma_sep_rs-0b9a61c9d8c245d8.d: comma-sep.rs Cargo.toml

comma-sep.rs:
Cargo.toml:

# env-dep:CLIPPY_ARGS=--no-deps__CLIPPY_HACKERY__
# env-dep:CLIPPY_CONF_DIR
